--- a/SpringWeb/src/main/resources/application.properties
+++ b/SpringWeb/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# mariaDB settings
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/project?serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=maria
