--- a/SpringWeb/src/main/resources/application.properties
+++ b/SpringWeb/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/project?serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=maria
+
+mybatis.mapper-locations=classpath:com/test/web/dao/mybatis/mapper/*.xml
