--- a/SpringWeb/pom.xml
+++ b/SpringWeb/pom.xml
@@ -53,7 +53,12 @@
 		    <artifactId>jstl</artifactId>
 		</dependency>
 
-
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter-test</artifactId>
+		    <version>2.1.3</version>
+		    <scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
